--- a/src/styles/arquitectura.scss
+++ b/src/styles/arquitectura.scss
@@ -1,123 +1,132 @@
-// Colors 
+// Colors
 $white: #fff;
 $black: #000;
 $red: #aa151b;
 $yellow: #f1bf00;
 
-$titleFont: 'Romana';
-$bodyFont: 'Apercu';
+$titleFont: "Romana";
+$bodyFont: "Apercu";
 
 .hide {
-    display: none;
+  display: none;
 }
 
 #arquitectura {
-    height: 100vh; 
+  height: 100vh;
 
-    .red-bar {
-        position: absolute;
-        width: 100vw;
-        height: calc(100vh - 340px);
-        top: 340px;
-    }
+  .content {
+    display: flex;
+    justify-content: center;
+
+    .images {
+      position: relative;
+      top: 9rem;
+      display: grid;
+      grid-template-columns: 38% 62%;
+      grid-gap: 5px;
+      padding: 5rem;
+      min-width: 80rem;
+      width: 40vw;
+
+      .image-container {
+        border: 5px solid rgba(0, 0, 0, 0);
+
+        &:hover {
+          transition: 200ms;
+          border: 5px solid $yellow;
+          cursor: pointer;
+        }
+      }
+
+      .clicked {
+        transition: 200ms;
+        filter: brightness(40%);
+      }
+
+      .image-grid-1 {
+        padding-top: 20%;
+
+        .pilatos-image {
+          opacity: 0;
+          height: fit-content;
+
+          animation: fadeFromTopLeft 1.2s ease-in-out 1;
+          animation-delay: 0.01s;
+          animation-fill-mode: forwards;
+        }
+      }
+
+      .image-grid-2 {
+        display: grid;
+        grid-gap: 5px;
+
+        .catedral-image {
+          opacity: 0;
+          height: fit-content;
+
+          animation: fadeFromTopRight 1.2s ease-in-out 1;
+          animation-delay: 0.01s;
+          animation-fill-mode: forwards;
+        }
+
+        .image-container-setas {
+            border: 5px solid rgba(0, 0, 0, 0);
+            width: 80%;
+
+            .setas-image {
+              opacity: 0;
+              height: fit-content;
     
-    .content {
-        display: flex;
-        justify-content: center;
-        
-        .images {
-            position: relative;
-            top: 90px;
-            display: grid;
-            grid-template-columns: min-content auto;
-            grid-gap: 5px;
-            padding: 50px;
-
-            .image-container {
-                border: 5px solid rgba(0, 0, 0, 0);
-                width: fit-content;
-
-                &:hover {
-                    transition: 200ms;
-                    border: 5px solid $yellow;
-                    cursor: pointer;
-                }
+              animation: fadeFromBotRight 1.2s ease-in-out 1;
+              animation-delay: 0.01s;
+              animation-fill-mode: forwards;
             }
 
-            .clicked {
+            &:hover {
                 transition: 200ms;
-                filter: brightness(40%);
-            }
-    
-            .image-grid-1 {
-                padding-top: 20%;
-                .pilatos-image {
-                    opacity: 0;
-                    width: 300px;
-
-                    animation: fadeFromTopLeft 1.2s ease-in-out 1;
-                    animation-delay: 0.01s;
-                    animation-fill-mode: forwards;
-                }
-            }
-    
-            .image-grid-2 {
-                display: grid;
-                grid-gap: 5px;
-                .catedral-image {
-                    opacity: 0;
-                    width: 500px;
-
-                    animation: fadeFromTopRight 1.2s ease-in-out 1;
-                    animation-delay: 0.01s;
-                    animation-fill-mode: forwards;
-                }
-                .setas-image {
-                    opacity: 0;
-                    width: 400px;
-
-                    animation: fadeFromBotRight 1.2s ease-in-out 1;
-                    animation-delay: 0.01s;
-                    animation-fill-mode: forwards;
-                }
+                border: 5px solid $yellow;
+                cursor: pointer;
             }
         }
-        
-        .text {
-            height: fit-content;
-            position: relative;
-            top: 277px;
-        
-            animation: fadeUp3 0.6s ease-out 1;
-            animation-delay: 0.01s;
-            animation-fill-mode: forwards;
-            opacity: 0;
-            .text_title {
-                color: $black;
-                font-family: $titleFont;
-                font-size: 4rem;
-                &::after {
-                    content: '';
-                    display: block;
-                    position: relative;
-                    bottom: 10px;
-                    width: 100%;
-                    height: 7px;
-                    background-color: $yellow;
-                    z-index: -1;
-                }
-            }
-            .text_body {
-                width: 230px;
-                font-family: $bodyFont;
-                font-size: 1.25rem;
-                color: white;
-            }
-        }
+
+      }
     }
+
+    .text {
+      height: fit-content;
+      position: relative;
+      top: 277px;
+
+      animation: fadeUp3 0.6s ease-out 1;
+      animation-delay: 0.01s;
+      animation-fill-mode: forwards;
+      opacity: 0;
+      .text_title {
+        color: $black;
+        font-family: $titleFont;
+        font-size: 6.4rem;
+        &::after {
+          content: "";
+          display: block;
+          position: relative;
+          bottom: 10px;
+          width: 100%;
+          height: 7px;
+          background-color: $yellow;
+          z-index: -1;
+        }
+      }
+      .text_body {
+        width: 230px;
+        font-family: $bodyFont;
+        font-size: 2rem;
+        color: white;
+      }
+    }
+  }
 }
 
 .arquitectura--exit-active {
-    opacity: 0;
-    transition: opacity 0.5s;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
