--- a/src/styles/cultura.scss
+++ b/src/styles/cultura.scss
@@ -12,14 +12,7 @@ $bodyFont: 'Apercu';
   width: 100vw; 
 
   .hide {
-      display: none;
-  }
-
-  .red-bar {
-    height: 90%;
-    width: 400px;
-    background-color: $red;
-    left: 50%;
+    display: none;
   }
 
   .content {
@@ -28,17 +21,14 @@ $bodyFont: 'Apercu';
     justify-content: center;
 
     .images {
-      position: relative;
-      display: grid;
-      grid-template-columns: min-content;
-      grid-gap: 5px;
-      right: 96px;
-      top: 100px;
+      position: absolute;
+      transform: translateX(-51%);
+      top: 10%;
+      min-width: 40rem;
+      width: 25vw;
 
       .image-container {
         border: 5px solid rgba(0, 0, 0, 0);
-        width: fit-content;
-        height: fit-content;
         margin-left: auto;
 
         &:hover {
@@ -53,32 +43,43 @@ $bodyFont: 'Apercu';
         filter: brightness(40%);
       }
 
-
       .museum-fine-arts-image {
         opacity: 0;
-        width: 400px;
+        width: 100%;
 
         animation: fadeFromTopRight 1.2s ease-in-out 1;
         animation-delay: 0.01s;
         animation-fill-mode: forwards;
       }
-      .plaza-de-espana-image {
-        opacity: 0;
-        margin-left: auto;
-        width: 300px;
 
-        animation: fadeFromBotRight 1.2s ease-in-out 1;
-        animation-delay: 0.01s;
-        animation-fill-mode: forwards;
+      .image-container-plaza {
+        border: 5px solid rgba(0, 0, 0, 0);
+        margin-left: auto;
+        width: 75%;
+
+        .plaza-de-espana-image {
+          opacity: 0;
+          margin-left: auto;
+          
+          animation: fadeFromBotRight 1.2s ease-in-out 1;
+          animation-delay: 0.01s;
+          animation-fill-mode: forwards;
+        }
+
+        &:hover {
+          transition: 200ms;
+          border: 5px solid $yellow;
+          cursor: pointer; 
+        }
       }
     }
 
   .text {
     width: 230px;
     height: fit-content;
-    position: relative;
-    top: 188px;
-    right: 50px;
+    position: absolute;
+    top: 18.8rem;
+    left: 53%;
 
     animation: fadeUp2 0.6s ease-out 1;
     animation-delay: 0.01s;
@@ -87,7 +88,7 @@ $bodyFont: 'Apercu';
       .text_title {
         color: $white;
         font-family: $titleFont;
-        font-size: 4rem;
+        font-size: 6.4rem;
 
         &::after {
           content: '';
@@ -102,7 +103,7 @@ $bodyFont: 'Apercu';
       .text_body {
         color: $white;
         font-family: $bodyFont;
-        font-size: 1.25rem;
+        font-size: 2rem;
       }
     }
   }
