--- a/src/styles/historia.scss
+++ b/src/styles/historia.scss
@@ -1,27 +1,18 @@
-// Colors 
+// Colors
 $white: #fff;
 $black: #000;
 $red: #aa151b;
 $yellow: #f1bf00;
 
-$titleFont: 'Romana';
-$bodyFont: 'Apercu';
+$titleFont: "Romana";
+$bodyFont: "Apercu";
 
 #historia {
   height: 100vh;
-  width: 100vw; 
+  width: 100vw;
 
-    .hide {
-        display: none;
-    }
-
-  .red-bar {
-    height: 85%;
-    width: 500px;
-    background-color: $red;
-    left: 50%;
-    transform: translateX(-100%);
-    top: 15%;
+  .hide {
+    display: none;
   }
 
   .content {
@@ -30,22 +21,19 @@ $bodyFont: 'Apercu';
     justify-content: center;
 
     .images {
-      position: relative;
-      display: grid;
-      grid-template-columns: min-content;
-      grid-gap: 5px;
-      left: 120px;
-      top: 190px;
+      position: absolute;
+      top: 20%;
+      left: 50.25%;
+      min-width: 40rem;
+      width: 25vw;
 
       .image-container {
         border: 5px solid rgba(0, 0, 0, 0);
-        width: fit-content;
-        height: fit-content;
 
         &:hover {
           transition: 200ms;
           border: 5px solid $yellow;
-          cursor: pointer; 
+          cursor: pointer;
         }
       }
 
@@ -56,41 +44,52 @@ $bodyFont: 'Apercu';
 
       .real-alcazar-image {
         opacity: 0;
-        width: 450px;
 
         animation: fadeFromBotLeft 1.2s ease-in-out 1;
         animation-delay: 0.01s;
         animation-fill-mode: forwards;
       }
-      .maria-luisa-image {
-        opacity: 0;
-        margin-right: auto;
-        width: 400px;
 
-        animation: fadeFromTopLeft 1.2s ease-in-out 1;
-        animation-delay: 0.01s;
-        animation-fill-mode: forwards;
+      .image-container-maria {
+        border: 5px solid rgba(0, 0, 0, 0);
+        width: 80%;
+
+        .maria-luisa-image {
+          opacity: 0;
+          margin-right: auto;
+
+          animation: fadeFromTopLeft 1.2s ease-in-out 1;
+          animation-delay: 0.01s;
+          animation-fill-mode: forwards;
+        }
+
+        &:hover {
+          transition: 200ms;
+          border: 5px solid $yellow;
+          cursor: pointer;
+        }
       }
     }
 
-  .text {
-    width: 230px;
-    height: fit-content;
-    position: relative;
-    top: 230px;
-    left: 50px;
+    .text {
+      width: 230px;
+      height: fit-content;
+      position: absolute;
+      top: 23rem;
+      right: 53%;
 
-    animation: fadeUp2 0.6s ease-out 1;
-    animation-delay: 0.01s;
-    animation-fill-mode: forwards;
-    opacity: 0;
+      animation: fadeUp2 0.6s ease-out 1;
+      animation-delay: 0.01s;
+      animation-fill-mode: forwards;
+      opacity: 0;
+
       .text_title {
         color: $white;
         font-family: $titleFont;
-        font-size: 4rem;
+        font-size: 6.4rem;
 
         &::after {
-          content: '';
+          content: "";
           display: block;
           position: relative;
           bottom: 10px;
@@ -102,13 +101,13 @@ $bodyFont: 'Apercu';
       .text_body {
         color: $white;
         font-family: $bodyFont;
-        font-size: 1.25rem;
+        font-size: 2rem;
       }
     }
   }
 }
 
 .historia--exit-active {
-    opacity: 0;
-    transition: opacity 0.5s;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
