--- a/src/styles/instructions.scss
+++ b/src/styles/instructions.scss
@@ -23,6 +23,7 @@ $yellow6: #eaca63;
 $titleFont: "Romana";
 $bodyFont: "Apercu";
 
+
 .hidden {
   height: 100vh;
   overflow: hidden;
@@ -43,9 +44,11 @@ $bodyFont: "Apercu";
   left: 0;
 }
 
-#main {
-  overflow: hidden;
+body {
+  overflow-x: hidden;
+}
 
+#main {  
   .section-title {
     font-family: $titleFont;
     text-align: center;
@@ -110,7 +113,6 @@ $bodyFont: "Apercu";
   }
 
   .section-two {
-    background-color: $offWhite;
 
     .content {
       height: 100%;
@@ -145,7 +147,7 @@ $bodyFont: "Apercu";
       }
 
       .blocks {
-        margin: 150px 0;
+        margin: 250px 0;
       }
 
       .block-one {
@@ -199,7 +201,7 @@ $bodyFont: "Apercu";
         .block-one-image {
           overflow: hidden;
           width: 60%;
-          max-width: 800px;
+          // max-width: 800px;
           margin: 3.2rem;
           position: relative;
 
@@ -700,3 +702,6 @@ $bodyFont: "Apercu";
     margin-top: -11px;
   }
 }
+
+
+
