Position sticky active on Google map on Day page

--- a/src/styles/instructions.scss
+++ b/src/styles/instructions.scss
@@ -44,9 +44,9 @@ $bodyFont: "Apercu";
   left: 0;
 }
 
-body {
-  overflow-x: hidden;
-}
+// body {
+//   overflow-x: hidden;
+// }
 
 #main {  
   .section-title {
