--- a/src/styles/day.scss
+++ b/src/styles/day.scss
@@ -1,4 +1,53 @@
+// Colors
+$white: #fff;
+$black: #000;
+$red: #aa151b;
+$yellow: #f1bf00;
+
+$titleFont: "Romana";
+$bodyFont: "Apercu";
+
+#day {
+  height: calc(100vh - 2rem);
+  z-index: 1;
+}
+
+#yellow-page {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $yellow;
+  z-index: 1;
+
+  animation: frameSlideLeft 1.0s ease-in-out 1;
+  animation-delay: 2.1s;
+  animation-fill-mode: forwards;
+}
+
 #googleMaps {
-  height: 500px;
-  width: 500px;
+  align-self: flex-start;
+  margin: 2rem;
+  width: 35%;
+  height: 75vh;
+  position: sticky !important;
+  top: 15%;
+}
+
+.day-title {
+  font-size: 6rem;
+  text-align: center;
+  margin: 2rem 2rem 0 0;
+}
+
+.day-content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.day-map-placeholder {
+  width: 35%;
+  height: 75vh;
+  background-color: $red;
 }
