--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,8 @@
 body, html {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    // height: 100vh;
+    // width: 100vw;
     font-size: 62.5%; 
 }
 
@@ -11,6 +11,7 @@ body, html {
     padding: 0;
     box-sizing: border-box;
     user-select: none;
+    list-style-type: none;
 }
 
 #base {
