--- a/src/styles/day.scss
+++ b/src/styles/day.scss
@@ -9,7 +9,7 @@ $bodyFont: "Apercu";
 
 #day {
   // height: calc(100vh - 2rem);
-  height: auto;
+  // height: auto;
   // height: 9000px;
   z-index: 1;
 }
@@ -20,29 +20,79 @@ $bodyFont: "Apercu";
   width: 100%;
   height: 100%;
   background-color: $yellow;
-  z-index: 1;
+  z-index: 5;
 
-  animation: frameSlideLeft 1.0s ease-in-out 1;
-  animation-delay: 2.1s;
+  animation: frameSlideLeft 1s ease-in-out 1;
+  animation-delay: 2.5s;
   animation-fill-mode: forwards;
 }
-
-#googleMaps {
+.day-map-container {
+  width: 30%;
   margin: 2rem;
-  width: 35%;
-  height: 75vh;
-  position: fixed !important;
-  top: 13%;
-  left: 8%;
+  margin-bottom: 9rem;
+  position: relative;
+
+  #googleMaps {
+    width: 100%;
+    height: 75vh;
+    position: sticky !important;
+    top: 13%;
+    left: 8%;
+  }
+
+  .google-maps-question-helper {
+    width: 100%;
+    height: 75vh;
+    position: sticky !important;
+    top: 13%;
+    left: 8%;
+    background-color: rgba(128, 128, 128, 0.664);
+    display: grid;
+    place-items: center;
+    padding: 3rem;
+
+    div {
+      text-align: center;
+      color: white;
+      font-size: 3rem;
+      font-family: $titleFont;
+
+      a {
+        color: $red;
+        font-weight: 700;
+        text-decoration: none;
+      }
+    }
+  }
+
+  .google-maps-question {
+    position: absolute;
+    height: 3rem;
+    width: 3rem;
+    left: -5rem;
+    color: $red;
+    opacity: 0.3;
+    cursor: pointer;
+    transition: 200ms;
+
+    &:hover {
+      transition: 200ms;
+      opacity: 1;
+    }
+
+    .google-maps-question-icon {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
 .day-banner {
-  
+  // background-color: $red;
   .day-title {
-    font-size: 6rem;
+    font-size: 8rem;
     text-align: center;
     margin: 2rem 0 0 0;
-
   }
 }
 
@@ -56,4 +106,134 @@ $bodyFont: "Apercu";
   width: 35%;
   height: 75vh;
   // background-color: $red;
+}
+
+.card-zoom-modal {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 30;
+  background-color: rgba(0, 0, 0, 0.671);
+  display: none;
+  cursor: pointer;
+
+  .modal {
+    height: 80vh;
+    width: 70vw;
+    position: fixed !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 3rem;
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 31;
+    cursor: default;
+
+    &:focus {
+      outline: none;
+    }
+
+    .modal-image {
+      height: 100%;
+    }
+  }
+
+  .modal-close-button {
+    position: fixed;
+    top: 0;
+    right: -3rem;
+    z-index: 15;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+
+    .modal-close-icon {
+      height: 1.5vw;
+      width: 1.5vw;
+      color: white;
+    }
+  }
+
+  .modal-image-change-button {
+    position: fixed;
+    top: 0;
+    font-size: 2rem;
+    height: 100%;
+    width: 25%;
+    cursor: pointer;
+
+    &:hover {
+      // transition: 200ms;
+      background-color: rgba(0, 0, 0, 0.192);
+    }
+  }
+
+  .modal-previous-button {
+    left: 0rem;
+  }
+
+  .modal-next-button {
+    right: 0rem;
+  }
+}
+
+.modal-open {
+  display: block;
+}
+
+.day-footer {
+  height: 100vh;
+  background-color: $red;
+  padding: 10vh;
+  display: grid;
+  place-items: center;
+
+  .day-footer-extro {
+    // text-align: center;
+
+    .day-footer-title {
+      margin: 0;
+      padding: 0;
+      color: white;
+      font-family: $titleFont;
+      font-size: 12rem;
+    }
+
+    .day-footer-restart {
+      color: white;
+      font-family: $titleFont;
+      font-size: 7rem;
+      cursor: pointer;
+      text-decoration: none;
+      transition: 200ms;
+      width: fit-content;
+      z-index: 1;
+
+      position: relative;
+    }
+
+    .day-footer-restart:hover {
+      color: $yellow;
+      transition: 250ms;
+    }
+
+    .day-footer-restart::after {
+      display: block;
+      content: "";
+      border-bottom: solid 6px white;
+      transform: scaleX(0);
+      transition: transform 250ms ease-in-out;
+      transform-origin: 0%;
+      width: 100%;
+      position: absolute;
+      bottom: 9px;
+      z-index: -1;
+    }
+
+    .day-footer-restart:hover::after {
+      transform: scaleX(1);
+    }
+  }
 }
